--- a/css/style.css
+++ b/css/style.css
@@ -20,8 +20,8 @@ body{
 }
 @media (max-width: 768px) {
   .container {
-　flex-direction: column;
-　width: 50%;
+flex-direction: column;
+width: 50%;
   float: left;
   }
 }
@@ -60,7 +60,7 @@ body{
     padding:20px;
 }
 .sen{
-    border-bottom:solid 0.5px #b8b4ac;
+    border-bottom:solid 0.5px #f9f9f9;
     background-image:url("../images/top/next_icon.png");
     background-repeat: no-repeat;
     background-position: 95% center;
@@ -105,9 +105,11 @@ body{
     color:#887f69;
     background-color:#e8e4da;
     font-weight:bold;
-    font-size:small;
+    font-size:11px;
     margin-bottom:10px;
     width:100%;
+    padding-top:10px;
+    padding-bottom:10px;
 }
 .saikin{
     color:#a59f8e;
@@ -142,7 +144,7 @@ li {
   width:40%;
 }
 li img {
-  width: 80%;
+  width:80%;
   cursor: pointer;
 }
 #list_img{
@@ -156,8 +158,12 @@ li img {
 }
 .mi{
     float:left;
+    max-width: 100%
 }
-.pad{
+img{
+    max-width: 100%
+}
+.gazou{
     padding:7px;
 }
 .aside{
@@ -204,9 +210,11 @@ li img {
     color:#e80f66;
     display:inline;
     margin-left:20px;
+    font-size:22px;
 }
 .tax{
      display:inline;
+     font-size:14px;
 }
 input[type="radio"] {
     display: inline-block; 
@@ -225,6 +233,10 @@ input[type="radio"] {
 .bo{
     border: 1px solid #ccc;
 }
+.bu{
+    color:#f9f9f9;
+    border: 1px solid #ccc;
+}
 .cha{
     color:#887f69;
     font-weight:bold;
@@ -236,4 +248,45 @@ input[type="radio"] {
 .products_info_box {
     background-color: #fff;
     padding: 20px;
+}
+.add{
+    margin-top:-40px;    
+}
+.setu{
+    background-color:#ffffff;
+}
+.pad{
+    padding:5px;
+}
+.haha{
+    float:left;
+    border-top:solid;
+    border-top-width:1px;
+    border-top-color:#f9f9f9;
+}
+.hah{
+    border-bottom:solid;
+    border-bottom-width:1px;
+    border-bottom-color:#f9f9f9;
+    float:left;
+}
+@media(max-width: 768px ){
+    .haha{
+        clear:left;
+    }
+}
+.clearfix{
+    border-bottom:solid;
+    border-bottom-width:1px;
+    border-bottom-color:#f9f9f9;
+}
+.orange{
+    border-bottom:solid;
+    border-bottom-width:1px;
+    border-bottom-color:#f9f9f9;
+}
+.red{
+    border-bottom:solid;
+    border-bottom-width:1px;
+    border-bottom-color:#f9f9f9;
 }
